<resources>
    <string name="app_name">Contact List Shared Preferences</string>
    <string name="title_activity_new_contact">New Contact Activity</string>
    <string name="title_activity_profile">Profile Activity</string>
    <string name="title_activity_contact_list">Contact List Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_contact">Nuevo Contacto</string>
    <string name="description_photo">foto del contacto</string>
    <string name="name_title">Nombre</string>
    <string name="phone_title">Teléfono</string>
    <string name="email_title">Email</string>
    <string name="save">Guardar</string>
    <string name="fields_validation_error_message">Ingrese los campos correctamente</string>
    <string name="contact_info">Contact Info</string>
    <string name="login_title">Inicio de Sesión</string>
    <string name="username">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="default_value" />
    <string name="welcome">"Bienvenido "</string>
    <string name="take_photo">Tomar Foto</string>
    <string name="photo_does_not_exist">La foto no ha sido tomada</string>
</resources>
