<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_title"
        android:id="@+id/loginTitle"
        android:gravity="center"
        android:layout_marginBottom="@dimen/layout_height"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="@dimen/login_image_dimension"
        android:layout_height="@dimen/login_image_dimension"
        android:id="@+id/loginImage"
        android:layout_margin="@dimen/margin_right_title"
        android:layout_gravity="center"
        android:background="@drawable/loginlocked" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/username"
        android:layout_margin="@dimen/layout_margin_top_bottom"
        android:hint="@string/username" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_margin="@dimen/layout_margin_top_bottom"
        android:hint="@string/password" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btnLogin"
        android:layout_marginTop="@dimen/margin_right_title"
        android:clickable="true"
        android:onClick="onClickLogin" />

</LinearLayout>
