<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="@dimen/select_layout_photo_dimensions">

    <ImageView
        android:layout_width="@dimen/row_photo_dimensions"
        android:layout_height="60dp"
        android:id="@+id/photoContact"
        android:contentDescription="@string/description_photo"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/name_title"
                android:id="@+id/nameContact"
                android:layout_weight="1.5"
                android:layout_marginLeft="@dimen/layout_margin_top_bottom"
                android:layout_marginTop="@dimen/layout_margin_top_bottom"
                android:layout_marginRight="@dimen/layout_margin_top_bottom" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/phone_title"
                android:id="@+id/phoneContact"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/layout_margin_top_bottom"
                android:layout_marginTop="@dimen/layout_margin_top_bottom"
                android:layout_marginRight="@dimen/layout_margin_top_bottom" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/email_title"
            android:id="@+id/emailContact"
            android:gravity="center_horizontal|top"
            android:layout_marginLeft="@dimen/layout_margin_top_bottom"
            android:layout_marginRight="@dimen/layout_margin_top_bottom"
            android:layout_marginBottom="@dimen/layout_margin_top_bottom" />
    </LinearLayout>


</LinearLayout>